[package]
name = "saddleback-cs-bot"
version = "0.1.0"
authors = ["Mark Gross <mark.gross2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.0"
# serenity = { version = "0.9.0-rc.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
tokio = { version = "0.2", features = ["macros"] }
