[package]
name = "saddleback-cs-bot"
version = "0.1.0"
authors = ["Mark Gross <mark.gross2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.log]
version = "0.4.*"

[dependencies.simplelog]
version = "0.8.0"

[dependencies.serenity]
version = "0.9.0-rc.0"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.tokio-postgres]
version = "0.5.5"
